# SUNO-Album-Studio-OS

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  ONBOARDING.md  README.md  USER_GUIDE.md
00_system/: agent_roles.md  (+8 more)
06_integrations/studio-browser/: README.md  pyproject.toml  requirements.txt  studio
06_integrations/studio-browser/server/: __init__.py  art.py  config.py  main.py  scanner.py  suno_bridge.py
06_integrations/studio-browser/server/parsers/: album_md.py  suno_runs.py  track_map.py  track_md.py
06_integrations/studio-browser/server/writers/: archive_track.py  listening_notes.py  select_final.py  track_status.py
06_integrations/studio-browser/tests/: conftest.py  test_api.py  test_art.py  test_released.py  test_scanner.py
06_integrations/studio-browser/tests/fixtures/02_albums/demo-album/: album.md  track_map.md
06_integrations/studio-browser/tests/fixtures/02_albums/demo-album/tracks/demo-track/: track.md
06_integrations/studio-browser/tests/fixtures/02_albums/demo-album/tracks/demo-track/lyrics/: lyrics_v1.md
06_integrations/studio-browser/tests/fixtures/02_albums/demo-album/tracks/demo-track/suno/: suno_prompt_v1.md  suno_runs.md
06_integrations/studio-browser/tests/fixtures/02_albums/released-demo/: album.md  track_map.md
06_integrations/studio-browser/tests/fixtures/02_albums/released-demo/lyrics/: 01-released-song.md
06_integrations/studio-browser/tests/fixtures/02_albums/released-demo/style_archive/: 01-released-song_style.md
06_integrations/studio-browser/web/: app.js  index.html  styles.css
(+109 files in other folders)
