[project]
name = "studio-browser"
version = "0.1.0"
description = "Local browser interface for SUNO Album Studio album review"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "PyYAML>=6.0",
    "python-dotenv>=1.0.0",
    "markdown>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[tool.pytest.ini_options]
testpaths = ["tests"]
